# bun-notebook

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  E2E_TESTS_SUMMARY.md  LICENSE  PLAYWRIGHT_ACCEPTANCE.md  PLAYWRIGHT_SETUP_SUMMARY.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  version.json  vite.config.ts
.claude/: settings.local.json
design/: Demo.md  README.md  development-task-plan.md  hierarchical-visualization-v2.3.md  hybrid-architecture-design.md  rust-rewrite-proposal.md  tauri-desktop-implementation.md  visualization-design-v2.4.md  visualization-design-v2.5.md  技术实现方案-源码分析系统_v2.0.md  技术实现方案-源码分析系统_v2.1.md
docs/: ABOUT_SYSTEM.md  GITHUB_ACTIONS_GUIDE.md  MYGIT_USAGE.md  MYTAG_USAGE.md  Markdown编辑预览功能优化方案.md  PLAYWRIGHT_GUIDE.md  QUICKSTART.md  README.md  VERSION_MANAGEMENT.md  implementation_tasks_v2.1.md  产品需求规格说明书-源码分析系统_v1.2.md  功能测试报告.md  增强编辑器功能-验收报告.md  开发环境启动指南.md  快捷键说明.md  技术实现方案-源码分析系统.md  技术实现方案-源码分析系统_v1.2.md  技术栈选型报告_latest.md  技术栈选型报告_v1.0.md  技术栈选型报告_v1.1.md  技术栈选型报告_v1.2.md  本地知识库功能设计文档.md
e2e/: README.md  editor.spec.ts  example.spec.ts  file-operations.spec.ts  navigation.spec.ts
scripts/: deploy.bat  (+12 more)
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: fs.rs  knowledge_base.rs
src-tauri/src/models/: knowledge_base.rs  mod.rs
src-tauri/src/services/: history_service.rs  knowledge_base_service.rs  mod.rs
(+60 files in other folders)
